--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 04 2018 17:57:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Mar 04 2018 18:38:20 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adb1" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -134,7 +134,7 @@ $(document).ready(function() {
     });
 });
 </script>
-  <script src="http://maciejsawicki.com/cms-cm-warszawska/cms-cm-warszawska.js"></script>
+  <script src="https://cms-cm-warszawska.github.io/cms-cm-warszawska.js"></script>
   <script>
   if (cmsTexts) {
   	$('[cms-text]').each(function() {
