More slots for USD price list

--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 04 2018 19:31:07 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -139,6 +139,10 @@
             <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz14__tytul" class="price-left-column">USG Doppler tętnic szyjnych i kręgowych</span> <span cms-text="usgCennik__wiersz14__cena" class="price-float">90 zł</span></li>
             <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz15__tytul" class="price-left-column">USG Doppler tętnic nerkowych</span> <span cms-text="usgCennik__wiersz15__cena" class="price-float">140 zł</span></li>
             <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz16__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz16__cena" class="price-float">-</span></li>
+            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz17__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz17__cena" class="price-float">-</span></li>
+            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz18__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz18__cena" class="price-float">-</span></li>
+            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz19__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz19__cena" class="price-float">-</span></li>
+            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz20__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz20__cena" class="price-float">-</span></li>
           </ul>
         </div>
         <div id="badania-nfz" class="subnav-section">
