Update RODO info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adb1" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,10 +30,10 @@
 </head>
 <body>
   <div data-ix="new-interaction" id="simplecookienotification_v01" class="cookie-pop cookies-box w-clearfix">
-    <div class="strona-uzywa">Strona używa plików cookies. </div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
+    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
-      <div class="w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" class="ale-gramy-logo"></a>
+      <div class="w-container"><a href="index.html" class="brand w-nav-brand w--current"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -44,7 +44,7 @@
             </a>
           </div>
         </div>
-        <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Start</a>
+        <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link w--current">Start</a>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
@@ -118,7 +118,7 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
