--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -28,9 +28,11 @@
 </script>
 </head>
 <body>
+  <div data-ix="new-interaction" id="simplecookienotification_v01" class="cookie-pop cookies-box w-clearfix">
+    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
-      <div class="w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" class="ale-gramy-logo"></a>
+      <div class="w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -53,7 +55,7 @@
               <div>Przydatne informacje</div>
             </div>
             <nav class="dropdown-menu w-dropdown-list"><a href="przydatne-informacje/przygotowanie-do-usg.html" class="dropdown-link w-dropdown-link">Przygotowanie do USG</a><a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
+          </div><a href="kontakt.html" class="nav-link last-button w-nav-link w--current">Kontakt</a></nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -95,13 +97,13 @@
           </div>
         </div>
         <div data-widget-latlng="53.132264,23.174683" data-widget-style="roadmap" data-widget-zoom="15" data-widget-tooltip="Centrum Medyczne" class="contact-map w-widget w-widget-map"></div>
-        <div id="map2" class="contact-text-above-map">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.</div><img src="images/mapka.png" class="mapka-png"></div>
+        <div id="map2" class="contact-text-above-map">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.</div><img src="images/mapka.png" alt="" class="mapka-png"></div>
     </div>
     <div class="footer">
       <div class="w-container">
         <div class="w-row">
           <div class="footer-left w-clearfix w-col w-col-5 w-col-stack">
-            <a href="kontakt.html" class="link-block w-inline-block">
+            <a href="kontakt.html" class="link-block w-inline-block w--current">
               <div class="footer-text padding-right">Kontakt</div>
             </a>
             <a href="polityka-cookies.html" class="link-block w-inline-block">
@@ -113,7 +115,7 @@
               <div class="footer-text">Design &amp; Code by MaciejSawicki.com</div>
             </a>
             <div class="footer-text w-hidden-small w-hidden-tiny">|</div>
-            <a href="kontakt.html" class="link-block w-inline-block">
+            <a href="kontakt.html" class="link-block w-inline-block w--current">
               <div class="footer-text no-padding-right">© 2015 Centrum Medyczne Warszawska</div>
             </a>
           </div>
@@ -121,7 +123,7 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
