--- a/nasze-przychodnie/medstyl-medycyna-estetyczna.html
+++ b/nasze-przychodnie/medstyl-medycyna-estetyczna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55e7f2977ccabd4334861a72" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
 <body>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
-      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" class="ale-gramy-logo"></a>
+      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -46,7 +46,7 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link w--current"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
@@ -95,8 +95,8 @@
           <h2 class="oferta-heading medstyl">Doświadczenie</h2>
           <div class="content-paragraph">Gwarantujemy profesjonalną, kompleksową, a przede wszystkim ciepłą i dyskretną opiekę z zakresu medycyny estetycznej. Zabiegi wykonywane są przez doświadczonego lekarza kosmetologa z ponad 20-letnią praktyką.</div>
           <div class="w-row">
-            <div class="column-reset-padding w-col w-col-6"><img src="../images/c17aaaaa.jpg" class="cm-content-image small"></div>
-            <div class="column-reset-padding w-col w-col-6"><img src="../images/medstyl3.jpg" class="cm-content-image small"></div>
+            <div class="column-reset-padding w-col w-col-6"><img src="../images/c17aaaaa.jpg" alt="" class="cm-content-image small"></div>
+            <div class="column-reset-padding w-col w-col-6"><img src="../images/medstyl3.jpg" alt="" class="cm-content-image small"></div>
           </div>
         </div>
         <div id="zabiegi" class="subnav-section">
@@ -125,7 +125,7 @@
           <h2 class="oferta-heading medstyl">Certyfikaty</h2>
           <div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c01.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c01.jpg" alt=""><script type="application/json" class="w-json">{
   "group": "Certificates",
   "items": [
     {
@@ -139,7 +139,7 @@
     }
   ]
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c02_1.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c02_1.jpg" alt=""><script type="application/json" class="w-json">{
   "group": "Certificates",
   "items": [
     {
@@ -153,7 +153,7 @@
     }
   ]
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c03_1.jpg",
@@ -167,7 +167,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c04.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c04.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c04_1.jpg",
@@ -181,7 +181,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c05.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c05.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c05_1.jpg",
@@ -195,7 +195,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06_1.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c06.jpg",
@@ -211,7 +211,7 @@
 }</script></a></div>
             </div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c07_1.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c07_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c07.jpg",
@@ -225,7 +225,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c08_1.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c08_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c08.jpg",
@@ -239,7 +239,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09_1.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c09.jpg",
@@ -253,7 +253,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c10.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c10.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c10_1.jpg",
@@ -267,7 +267,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c11_1.jpg",
@@ -281,7 +281,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c12_1.jpg",
@@ -297,7 +297,7 @@
 }</script></a></div>
             </div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c13.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c13.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c13.jpg",
@@ -311,7 +311,7 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c14.jpg"><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c14.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c14.jpg",
@@ -359,7 +359,7 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
