--- a/polityka-cookies.html
+++ b/polityka-cookies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adb2" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,34 @@
 </script>
 </head>
 <body>
-  <div class="w-container">
+  <div class="rodo-container w-container">
+    <h1><strong>Obowiązek informacyjny RODO</strong></h1>
+    <div class="w-richtext">
+      <p>‍<strong>Patrycja Klaudia Budna Niepubliczny Zakład Opieki Zdrowotnej Centrum Medyczne „Warszawska” </strong><br></p>
+      <p><strong>ul. Bukowskiego 1 lok. 2, 15-066 Białystok</strong></p>
+      <p><br></p>
+      <p>Zgodnie z art. 13 ust. 1 i ust. 2 Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych, dalej również „RODO”), informujemy, że:</p>
+      <p><br></p>
+      <p>1. Administratorem Pani/Pana danych osobowych jest Patrycja Klaudia Budna Niepubliczny Zakład Opieki Zdrowotnej Centrum Medyczne „Warszawska” adres: ul. Bukowskiego 1 lok. 2, 15-066 Białystok. </p>
+      <p>2. W sprawie danych osobowych możesz kontaktować się pod adresem: ul. Bukowskiego 1 lok. 2, 15-066 Białystok lub adresem e-mail: patrycja.budna@cmwarszawska.pl</p>
+      <p>3. Pani/Pana dane osobowe przetwarzane będą:</p>
+      <p>a) w celu świadczenia usług medycznych: na podstawie art. 6 ust. 1 lit. c) oraz art. 9 ust. 1 lit. h)  RODO, </p>
+      <p>b) w celu udokumentowania Pani/Pana stanu zdrowia oraz udzielonych Pani/Panu świadczeń zdrowotnych: na podstawie ustawy o prawach pacjenta i Rzeczniku Praw Pacjenta oraz art. 6 ust. 1 lit. c) oraz art. 9 ust. 1 lit. h) RODO, </p>
+      <p>c) w celu komunikacji korzystania z usług medycznych oraz otrzymywania za pośrednictwem telefonii komórkowej i poczty elektronicznej informacji dotyczącej planowanych wizyt, jak również informacji o medycznej działalności przedsiębiorstwa Patrycja Klaudia Budna Niepublicznego Zakładu Opieki Zdrowotnej Centrum Medyczne „Warszawska”: na podstawie art. 6 ust. 1 lit. a) i art. 9 ust. 1 lit a) RODO – jeśli taka zgoda zostanie przez Pana/Panią wyrażona. </p>
+      <p>4. Odbiorcą Pani/Pana danych osobowych będą podmioty uprawnione do uzyskania danych osobowych na podstawie przepisów prawa (w tym między innymi: Narodowy Fundusz Zdrowia, podmioty współpracujące z administratorem w zakresie diagnostyki, podmioty wskazane w art. 26 ustawy z dnia 6 listopada 2008 r. o prawach pacjenta i Rzeczniku Praw Pacjenta oraz w przepisach ustaw szczególnych).</p>
+      <p>5. W przypadku udzielania świadczeń opieki zdrowotnej finansowanych ze środków publicznych Pani/Pana dane osobowe przetwarzane będą: na podstawie art. 2 oraz art. 49 i nast. ustawy z dnia 27 sierpnia 2004 r. o świadczeniach opieki zdrowotnej finansowanych ze środków publicznych, a w przypadkach, o których mowa w art. 12 i nast. ww. ustawy – na podstawie wskazanych przepisów szczególnych, oraz w celach weryfikacji Pani/Pana uprawnień do uzyskania świadczeń opieki zdrowotnej finansowanych ze środków publicznych, a także w celach rozliczenia tych świadczeń z Narodowym Funduszem Zdrowia lub innym podmiotem finansującym te świadczenia.</p>
+      <p>6. W przypadku, o którym mowa w pkt 5, odbiorcą Pani/Pana danych osobowych będzie Narodowy Fundusz Zdrowia lub inny podmiot finansujący świadczenia opieki zdrowotnej.</p>
+      <p>7. Administrator może pozyskiwać dane osobowe w sposób inny niż od osoby, której dane dotyczą na podstawie obowiązujących przepisów prawa.</p>
+      <p>8. Pani/Pana dane osobowe mogą być pozyskiwane od podmiotów współpracujących z Administratorem, w celu świadczenia usług medycznych, na podstawie przepisów prawa lub zgody osoby, której dane dotyczą. </p>
+      <p>9. Pani/Pana dane osobowe nie będą przekazywane do państwa trzeciego/organizacji międzynarodowej.</p>
+      <p>10. Pani/Pana dane osobowe będą przechowywane przez okresy zgodne z przepisami prawa, w szczególności, o których mowa w ustawie o prawach pacjenta i Rzeczniku Praw Pacjenta oraz w przepisach ustaw szczególnych, a w przypadku wyrażenia zgody przez okres do czasu cofnięcia tej zgody.</p>
+      <p>11. Posiada Pani/Pan prawo dostępu do treści swoich danych oraz prawo ich sprostowania, usunięcia, ograniczenia przetwarzania, prawo do przenoszenia danych, prawo wniesienia sprzeciwu, prawo do cofnięcia zgody w dowolnym momencie bez wpływu na zgodność z prawem przetwarzania, którego dokonano na podstawie zgody przed jej cofnięciem, z zastrzeżeniem jednak zasad gromadzenia i przetwarzania danych w dokumentacji medycznej, o których mowa w ustawie o prawach pacjenta i Rzeczniku Praw Pacjenta oraz w przepisach ustaw szczególnych. </p>
+      <p>12. Ma Pan/Pani prawo wniesienia skargi do organu nadzorczego, gdy uzna Pani/Pan, iż przetwarzanie Pani/Pana danych osobowych narusza przepisy o ochronie danych osobowych. Organem nadzorczym jest Prezes Urzędu Ochrony Danych Osobowych.</p>
+      <p>13. Podanie przez Panią/Pana danych osobowych jest konieczne do celów wskazanych z pkt 3 lit. a) i b) oraz dobrowolne do celu wskazanego w pkt 3 lit. c). </p>
+      <p>14. Pani/Pana dane nie będą przetwarzane w sposób zautomatyzowany, w tym nie będą podlegały profilowaniu. </p>
+      <p><br></p>
+    </div>
+    <h1>Polityka Cookies</h1>
     <div class="w-embed">
       <h5 style="text-align: center; font-family: Arial;">Polityka Cookies</h5>
       <p style="font-family: Arial;">Poniższa Polityka Cookies określa zasady zapisywania i uzyskiwania dostępu do danych na Urządzeniach Użytkowników korzystających z Serwisu do celów świadczenia usług drogą elektroniczną przez Administratora Serwisu.</p>
@@ -142,7 +169,7 @@ ul. Bukowskiego 1 lok.2
       </ul>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
