--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
 <body>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
-      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" class="ale-gramy-logo"></a>
+      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -46,7 +46,7 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link w--current">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
@@ -116,10 +116,10 @@
             <li cms-text="usgLekarz4__opis" class="usg-rodzaj-badania">-------------</li>
             <li cms-text="usgLekarz4__godziny" class="usg-hours">-------------</li>
           </ul>
-          <div class="content-paragraph gray subtext-below-hours">Prosimy o  umawianie się na konkretne godziny.<br>Zalecane jest przedstawienie wcześniej wykonywanych badań USG.</div><img src="../images/DSC00182-22.jpg" class="cm-content-image"></div>
+          <div class="content-paragraph gray subtext-below-hours">Prosimy o  umawianie się na konkretne godziny.<br>Zalecane jest przedstawienie wcześniej wykonywanych badań USG.</div><img src="../images/DSC00182-22.jpg" alt="" class="cm-content-image"></div>
         <div id="sprzet" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Sprzęt medyczny</h2>
-          <p class="content-paragraph">Badania są wykonywane na nowoczesnym aparacie USG SONIX OP</p><img src="../images/sonix_op.jpg" width="235" class="centered-image usg-machine"></div>
+          <p class="content-paragraph">Badania są wykonywane na nowoczesnym aparacie USG SONIX OP</p><img src="../images/sonix_op.jpg" width="235" alt="" class="centered-image usg-machine"></div>
         <div id="cennik" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Cennik</h2>
           <ul class="content-paragraph hours-box with-price w-list-unstyled">
@@ -147,7 +147,7 @@
         </div>
         <div id="badania-nfz" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Badanie bezpłatne</h2>
-          <p class="content-paragraph">W naszym gabinecie możliwe są bezpłatne badania w ramach NFZ, na podstawie skierowania od lekarzy (Niepublicznych Zakładów Opieki Zdrowotnej) posiadających umowę z naszą przychodnią na wykonywanie badań USG. W razie wątpliwości prosimy o kontakt telefoniczny.<span><a href="#"></a></span></p><img src="../images/nfz-logo.png" class="centered-image nfz"></div>
+          <p class="content-paragraph">W naszym gabinecie możliwe są bezpłatne badania w ramach NFZ, na podstawie skierowania od lekarzy (Niepublicznych Zakładów Opieki Zdrowotnej) posiadających umowę z naszą przychodnią na wykonywanie badań USG. W razie wątpliwości prosimy o kontakt telefoniczny.<span><a href="#"></a></span></p><img src="../images/nfz-logo.png" alt="" class="centered-image nfz"></div>
         <div id="przygotowanie" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Przygotowanie do badania</h2>
           <p class="content-paragraph">Aby zobaczyć jak przygotować się do badania <span><a href="../przydatne-informacje/przygotowanie-do-usg.html">kliknij tutaj</a></span></p>
@@ -179,7 +179,7 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
