--- a/nasze-przychodnie/poradnia-rodzinna.html
+++ b/nasze-przychodnie/poradnia-rodzinna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 14 2018 19:17:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
 <html data-wf-page="55e5d891c8a4a0594583e1f5" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
 <body>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
-      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" class="ale-gramy-logo"></a>
+      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -46,7 +46,7 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link w--current">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
@@ -96,7 +96,7 @@
         </div>
         <div id="o-przychodni" class="subnav-section">
           <h2 class="oferta-heading poradnia">O przychodni</h2>
-          <p class="content-paragraph">NZOZ Centrum Medyczne „Warszawska&quot; świadczy bezpłatne usługi medyczne w zakresie podstawowej opieki zdrowotnej bezpłatnie na podstawie umowy z NFZ oraz prywatnie.</p><img src="../images/centrum-medyczne-warszawska-budynek.jpg" class="cm-content-image">
+          <p class="content-paragraph">NZOZ Centrum Medyczne „Warszawska&quot; świadczy bezpłatne usługi medyczne w zakresie podstawowej opieki zdrowotnej bezpłatnie na podstawie umowy z NFZ oraz prywatnie.</p><img src="../images/centrum-medyczne-warszawska-budynek.jpg" alt="" class="cm-content-image">
           <div class="inner-header"><strong>Usługi w ramach NFZ</strong></div>
           <ul class="content-paragraph">
             <li>badania i porady lekarskie</li>
@@ -115,7 +115,7 @@
             <li>Lokal jest przystosowany do potrzeb osób niepełnosprawnych</li>
             <li>W lokalu znajduje się kącik zabaw dla dzieci oraz przewijak </li>
             <li>Pobieranie krwi do badań laboratoryjnych : poniedziałki, środy i piątki w godz. 8.00 - 9.00</li>
-          </ul><img src="../images/DSC00070-3.jpg"></div>
+          </ul><img src="../images/DSC00070-3.jpg" alt=""></div>
         <div id="godziny-otwarcia" class="subnav-section">
           <h2 class="oferta-heading poradnia">Godziny otwarcia</h2>
           <p class="content-paragraph"><span cms-text="rodzinnaGodzinyOtwarcia">Poradnia jest czynna od poniedziałku do piątku w godzinach 8.00 - 18.00.<br xmlns="http://www.w3.org/1999/xhtml">Zapisy na wizyty w godz. 8.00- 17.00 telefonicznie, osobiście, za pośrednictwem osób trzecich.</span><br><span><a href="../kontakt.html" class="blue-link">Kontakt</a></span></p>
@@ -137,13 +137,13 @@
             <div cms-text="personelRamkaOpiekaWSwieta">W godzinach 18.00 - 8.00 od poniedziałku do piątku, w weekendy oraz w dni wolne ustawowo i świąteczne bezpłatną opiekę nad naszymi pacjentami przejmuje Samodzielny Szpital Miejski im. PCK ul.Sienkiewicza 79 w Białymstoku tel. 85 652 25 05 oraz SPZOZ Wojewódzki Szpital Zespolony ul. Skłodowskiej 26 w Białymstoku tel. 85 748 81 26</div>
           </div>
           <div class="w-row">
-            <div class="column-reset-padding w-col w-col-6"><img src="../images/DSC00200.jpg" class="cm-content-image small"></div>
-            <div class="column-reset-padding w-col w-col-6"><img src="../images/DSC00237.jpg" class="cm-content-image small"></div>
+            <div class="column-reset-padding w-col w-col-6"><img src="../images/DSC00200.jpg" alt="" class="cm-content-image small"></div>
+            <div class="column-reset-padding w-col w-col-6"><img src="../images/DSC00237.jpg" alt="" class="cm-content-image small"></div>
           </div>
         </div>
         <div id="jak-zostac-pacjentem" class="subnav-section">
           <h2 class="oferta-heading poradnia">Jak zostać naszym pacjentem?</h2>
-          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza i pielęgniarki.<br><span class="button-download"><a href="https://dl.dropboxusercontent.com/u/21636539/Centrum%20medyczne/wzor_dekl_poz_nowe.doc" class="blue-link">Pobierz formularz deklaracji<br></a></span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.</p><img src="../images/DSC00247.jpg" class="cm-content-image"></div>
+          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza i pielęgniarki.<br><span class="button-download"><a href="https://dl.dropboxusercontent.com/u/21636539/Centrum%20medyczne/wzor_dekl_poz_nowe.doc" class="blue-link">Pobierz formularz deklaracji<br></a></span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.</p><img src="../images/DSC00247.jpg" alt="" class="cm-content-image"></div>
         <div id="kalendarz-szczepie" class="subnav-section">
           <h2 class="oferta-heading poradnia">Kalendarz szczepień</h2>
           <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download"><a href="http://pediatria.mp.pl/szczepieniaochronne/show.html?id=52627" target="_blank" class="blue-link">Zobacz kalendarz</a></span></p>
@@ -175,7 +175,7 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
