Update script url

--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 20 2019 09:09:39 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Jan 20 2019 10:50:45 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -195,7 +195,7 @@ $(document).ready(function() {
     });
 });
 </script>
-  <script src="https://cms-cm-warszawska.github.io/cms-cm-warszawska.js"></script>
+  <script src="https://cmwarszawska.pl/cms-cm-warszawska.js"></script>
   <script>
   if (cmsTexts) {
   	$('[cms-text]').each(function() {
