--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 20 2019 10:50:45 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jan 24 2019 21:12:32 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -86,9 +86,6 @@
             <a href="#cennik" class="subnav-link w-inline-block">
               <div>Cennik</div>
             </a>
-            <a href="#badania-nfz" class="subnav-link w-inline-block">
-              <div>Badania na NFZ</div>
-            </a>
             <a href="#przygotowanie" class="subnav-link w-inline-block">
               <div>Przygotowanie do badania</div>
             </a>
@@ -96,27 +93,27 @@
         </div>
         <div id="personel" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Personel medyczny i godziny przyjęć</h2>
-          <ul class="content-paragraph hours-box w-list-unstyled">
+          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
             <li cms-text="usgLekarz1__imie" class="usg-lekarz-imie"><strong>Lek. med. Marta Martynowicz</strong></li>
             <li cms-text="usgLekarz1__opis" class="usg-rodzaj-badania">Badania niemowląt, dzieci i dorosłych</li>
             <li cms-text="usgLekarz1__godziny" class="usg-hours">Wtorki i czwartki w godz. 13.00 -16.00 </li>
           </ul>
-          <ul class="content-paragraph hours-box w-list-unstyled">
+          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
             <li class="usg-lekarz-imie"><strong cms-text="usgLekarz2__imie">Lek. med. Monika Plona-Herbst <br></strong></li>
             <li cms-text="usgLekarz2__opis" class="usg-rodzaj-badania">Badania niemowląt, dzieci i dorosłych</li>
             <li cms-text="usgLekarz2__godziny" class="usg-hours">Środy w godz. 13.00 - 18.00</li>
           </ul>
-          <ul class="content-paragraph hours-box w-list-unstyled">
+          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
             <li cms-text="usgLekarz3__imie" class="usg-lekarz-imie"><strong>Lek. med. Julia Rutkowska</strong></li>
             <li cms-text="usgLekarz3__opis" class="usg-rodzaj-badania">Specjalista radiologii i diagnostyki obrazowej. Badania dzieci i dorosłych</li>
             <li cms-text="usgLekarz3__godziny" class="usg-hours">Środy w godz. 13.00 - 18.00</li>
           </ul>
-          <ul class="content-paragraph hours-box w-list-unstyled">
+          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
             <li cms-text="usgLekarz4__imie" class="usg-lekarz-imie">----------------</li>
             <li cms-text="usgLekarz4__opis" class="usg-rodzaj-badania">-------------</li>
             <li cms-text="usgLekarz4__godziny" class="usg-hours">-------------</li>
           </ul>
-          <div class="content-paragraph gray subtext-below-hours">Prosimy o  umawianie się na konkretne godziny.<br>Zalecane jest przedstawienie wcześniej wykonywanych badań USG.</div><img src="../images/DSC00182-22.jpg" alt="" class="cm-content-image"></div>
+          <div class="content-paragraph gray subtext-below-hours">Badanie USG są wykonywane przez lekarzy specjalistów z wieloletnim doświadczeniem.<br><br>Prosimy o  umawianie się na konkretne godziny.<br>Zalecane jest przedstawienie wcześniej wykonywanych badań USG.</div><img src="../images/DSC00182-22.jpg" alt="" class="cm-content-image"></div>
         <div id="sprzet" class="subnav-section">
           <h2 class="oferta-heading gabinet-usg">Sprzęt medyczny</h2>
           <p class="content-paragraph">Badania są wykonywane na nowoczesnym aparacie USG SONIX OP</p><img src="../images/sonix_op.jpg" width="235" alt="" class="centered-image usg-machine"></div>
@@ -145,7 +142,7 @@
             <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz20__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz20__cena" class="price-float">-</span></li>
           </ul>
         </div>
-        <div id="badania-nfz" class="subnav-section">
+        <div id="badania-nfz" class="subnav-section is-hidden-for-future">
           <h2 class="oferta-heading gabinet-usg">Badanie bezpłatne</h2>
           <p class="content-paragraph">W naszym gabinecie możliwe są bezpłatne badania w ramach NFZ, na podstawie skierowania od lekarzy (Niepublicznych Zakładów Opieki Zdrowotnej) posiadających umowę z naszą przychodnią na wykonywanie badań USG. W razie wątpliwości prosimy o kontakt telefoniczny.<span><a href="#"></a></span></p><img src="../images/nfz-logo.png" alt="" class="centered-image nfz"></div>
         <div id="przygotowanie" class="subnav-section">
