--- a/nasze-przychodnie/poradnia-rodzinna.html
+++ b/nasze-przychodnie/poradnia-rodzinna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 20 2019 10:50:45 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jan 24 2019 21:12:32 GMT+0000 (UTC)  -->
 <html data-wf-page="55e5d891c8a4a0594583e1f5" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -143,7 +143,7 @@
         </div>
         <div id="jak-zostac-pacjentem" class="subnav-section">
           <h2 class="oferta-heading poradnia">Jak zostać naszym pacjentem?</h2>
-          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza i pielęgniarki.<br><span class="button-download"><a href="https://dl.dropboxusercontent.com/u/21636539/Centrum%20medyczne/wzor_dekl_poz_nowe.doc" class="blue-link">Pobierz formularz deklaracji<br></a></span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.</p><img src="../images/DSC00247.jpg" alt="" class="cm-content-image"></div>
+          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza, pielęgniarki i położnej.<br><span class="button-download"><a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link">Pobierz formularz deklaracji wyboru lekarza<br></a></span><a href="https://cmwarszawska.pl/files/deklaracja-pielegniarki-poz.odt">Pobierz formularz deklaracji wyboru pielęgniarki</a><br><a href="https://cmwarszawska.pl/files/deklaracja-poloznej-poz.odt">Pobierz formularz deklaracji wyboru położnej</a><span class="button-download"><a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link"><br></a></span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.</p><img src="../images/DSC00247.jpg" alt="" class="cm-content-image"></div>
         <div id="kalendarz-szczepie" class="subnav-section">
           <h2 class="oferta-heading poradnia">Kalendarz szczepień</h2>
           <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download"><a href="http://pediatria.mp.pl/szczepieniaochronne/show.html?id=52627" target="_blank" class="blue-link">Zobacz kalendarz</a></span></p>
